# django-audio-asset-manager

./: .gitignore  .pylintrc  404.html  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Justfile  LICENSE  Makefile  README.md  conftest.py  index.html  manage.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  codestyle.yml
audio_asset_manager/: admin.py  apps.py  forms.py  models.py  receivers.py  rules.py  urls.py  views.py
audio_asset_manager/fixtures/: licensetype.json
audio_asset_manager/migrations/: 0001_initial.py
audio_asset_manager/templates/audio_asset_manager/: audioasset_list.html
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
docs/: code_of_conduct.md  quickstart.md
quickstart/: index.html
search/: search_index.json
security/: index.html
tests/: django_settings.py  test_forms.py  test_models.py  test_views.py  urls.py
